--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title{{ title }}></title>
+    <title>{{ title }}</title>
   </head>
   <body>
+        <h1>{{ title }}</h1>
+
     <nav>
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('about') }}">About</a>
