--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -10,6 +10,9 @@
     <nav>
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('about') }}">About</a>
+	<a href="{{ url_for('register') }}">Register</a>
+	<a href="{{ url_for('login') }}">Login<a/>
+	<a href="{{ url_for('logout') }}">Logout<a/>
     </nav>
     {% block content %}{% endblock %}
   </body>
