--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -1,27 +1,23 @@
 {% extends "layout.html" %}
-{% block body_content %}
- 	<h1>Registeration Page</h>
-	<p>Sign up</p>
-	<div class='form'>
-		<form method='POST' action=''>
+{% block content %}
+<form method="POST" action"">
+	<div class="form-group">
 		{{ form.hidden_tag() }}
-		<div class='form_group'>
+	<div>
+	<div class="form-group">
 		{{ form.email.label }}
 		{{ form.email }}
-		{% if form.email.errors %}
-			<div class='error'>
-				{% for error in form.email.errors %}
-					<span>{{ error }}</span>
-				{% endfor %}
-			</div>
-		{% endif %}
-	</div>
-	<br>
-	
-	<br>
-	<div class='form_group'>
+	<div>
+	<div class="form-group">
+		{{ form.password.label }}
+		{{ form.password }}
+	<div>
+	<div class="form-group">
+		{{ form.confirm_password.label }}
+		{{ form.confirm_password }}
+	<div>
+	<div class="form-group">
 		{{ form.submit }}
-	</div>
-	</form>
-</div>
+	<div>
+</form>
 {% endblock %}
