--- a/application/templates/class.html
+++ b/application/templates/class.html
@@ -1,33 +1,50 @@
+
 {% extends "layout.html" %}
 {% block content %}
-<body>
-	<form method="POST">
+
+<form method="POST" action="">
+	<div class="POST">
+        {{ form.hidden_tag() }}
+	</div>
+	<div method="POST">
+	{{ form.weapon.label }}
 	{{ form.weapon }}
 	
-	</form>
+	</div>
 
-	<form method="POST">
-        {{ form.ammotype }}
+	<div class="form-group">
+        {{ form.hidden_tag() }}
+        </div>   
+	<div method="POST">	
+	{{ form.ammotype.label }}
+	{{ form.ammotype }}
+       
+        </div>
+
+	<div class="form-group">
+        {{ form.hidden_tag() }}
+        </div>
+        <form method="POST">
+	{{ form.bodyarmour.label }}
+        {{ form.bodyarmour }}
         
         </form>
-
+	<div class="form-group">
+        {{ form.hidden_tag() }}
+        </div>
 	<form method="POST">
-        {{ form.bodyarmor }}
-        
-        </form>
-
-	<form method="POST">
+	{{ form.helmet.label }}
         {{ form.helmet }}
         
         </form>
 
 
-
-	<div>
+	
+	
     <div class="form-group">
         {{ form.submit }}
-    <div>
-</body>
+    </div>
+</form>
 
 {% endblock %}
 
