--- a/application/templates/setupview.html
+++ b/application/templates/setupview.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-{% if gear %}
-    {% for gear in Gear %}
+{% if setup %}
+    {% for setup in gear %}
         <div>
-            <h3>{{ gear.buildname }}</h3>
-            <p>{{ gear.comment }}</p>
-	            
+            <h3>{{ gear.title }}</h3>
+            <p>{{ post.content }}</p>
+            <p>Author: {{ post.first_name }} {{ post.last_name }}</p>
             {% if current_user.is_authenticated %}
             <a href="{{ url_for('delete_post_by_id', id=post.id) }}">delete</a>
             {% endif %}
@@ -14,5 +14,5 @@
 {% else %}
     <p>There are no posts to display.</p>
 {% endif %}
-
 {% endblock %}
+
