--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -8,8 +8,16 @@
         <h1>{{ title }}</h1>
 
     <nav>
+	{% if current_user.is_authenticated %}
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('about') }}">About</a>
+	<a href="{{ url_for('setup') }}">Setup<a/>
+	<a href="{{ url_for('logout') }}">Logout<a/>
+	{% else %}
+	<a href="{{ url_for('register') }}">Register</a>
+	<a href="{{ url_for('login') }}">Login<a/>
+	<a href="{{ url_for('logout') }}">Logout<a/>
+	{% endif %}
     </nav>
     {% block content %}{% endblock %}
   </body>
