--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -12,11 +12,12 @@
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('about') }}">About</a>
 	<a href="{{ url_for('setup') }}">Setup<a/>
+	<a href="{{ url_for('account') }}">Account<a/>
 	<a href="{{ url_for('logout') }}">Logout<a/>
 	{% else %}
 	<a href="{{ url_for('register') }}">Register</a>
 	<a href="{{ url_for('login') }}">Login<a/>
-	<a href="{{ url_for('logout') }}">Logout<a/>
+	<a href="{{ url_for('home') }}">Home</a>
 	{% endif %}
     </nav>
     {% block content %}{% endblock %}
