--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -7,6 +7,12 @@
 	<div class="form-group">
 		{{ form.email.label }}
 		{{ form.email }}
+	<div class="form-group">
+                {{ form.first_name.label }}
+                {{ form.first_name }}
+        <div class="form-group">
+                {{ form.last_name.label }}
+                {{ form.last_name }}	
 	<div>
 	<div class="form-group">
 		{{ form.password.label }}
